Fixing text wrap around image

--- a/style.css
+++ b/style.css
@@ -84,26 +84,37 @@ a:hover{
     padding-top: 3%; /* Make padding more responsive*/
 }
 
-.me {
+section {
+    position: relative;
+    width: 100%;
+    padding: 50px;
+}
+
+.circle {
+    position: relative;
+    overflow: hidden;
+}
+
+.circle.circle1 {
+    width: 500px;
+    height: 500px;
+    float: left;
     border-radius: 50%;
-    margin-left: 10vw;
-    margin-top: 5vw;
-    width: 40%;
-    display: flex;
-    border: 3px solid white;
-    box-shadow: 10px grey;
+    margin: 20px;
+    shape-outside: circle();
+}
 
-  }
+section h2 {
+    font-size: 3em;
+    margin-bottom: 10px; 
+}
 
-#bio {
-    font-family: 'Fira Sans', sans-serif;
-    padding-top: 2vh;
-    padding-bottom: 2vh;
-    margin-left: 2vw;
-    text-indent: 50px;
-  }
+section p {
+    font-size: 1.5em;
+}
 
-  /*-----------HAMBURGER-----------*/
+
+/*-----------HAMBURGER-----------*/
 .responsive-menu > ul {
     list-style-type: none;
     /* display: hidden; */
@@ -115,7 +126,13 @@ a:hover{
 
 /*-----------CONTACT-----------*/
 #contact-container {
-    magrin: 0 auto;
+    margin: 0 auto;
+    border: 1px solid black;
+}
+
+#contact-me {
+    /*not centering the contact form*/
+    margin: 0 auto;
 }
 
 /*---------MEDIA QUERIES-------------*/
@@ -138,7 +155,7 @@ a:hover{
         display: none;
     }
 
-    .me {
+    /* .me {
         float: left;  
     }
     
@@ -146,7 +163,7 @@ a:hover{
         float: right;
         shape-outside: circle(50%);
         width: 40%;
-    }
+    } */
 }
 
 @media only screen and (max-width: 481px) {
@@ -246,11 +263,11 @@ a:hover{
         width: 100%;
     }
     
-    .me {
+    /* .me {
         margin-left: auto;
         margin-right: auto;
         width: 75%;
-    }
+    } */
 
 }
 
@@ -269,8 +286,8 @@ a:hover{
         width: 400px;
     }
 
-    #bio {
+    /* #bio {
         width: 400px;
-    }
+    } */
 }
 
